<resources>
    <string name="app_name">Quản lý đơn hàng</string>
    <string name="order_management">Quản lý đơn hàng</string>
    <string name="order_detail">Thông tin đơn hàng</string>
    <string name="cancel_request">Yêu cầu hủy đơn</string>
    <string name="hint_search_order">Nhập mã đơn hàng</string>
    <string name="order_date">Ngày đặt đơn:</string>
    <string name="customer_name">Họ tên:</string>
    <string name="total_amount">Tổng tiền:</string>
    <string name="view_detail">Xem chi tiết</string>
    <string name="reorder">Mua lại</string>

    <string name="shipping_info">Thông tin nhận hàng</string>
    <string name="delivery_info">THÔNG TIN VẬN CHUYỂN</string>
    <string name="order_status">Tình trạng đơn hàng</string>
    <string name="payment_method">Hình thức thanh toán</string>
    <string name="shipping_unit">Đơn vị vận chuyển</string>

    <string name="order_placed">Đơn hàng đã đặt</string>
    <string name="confirmed">Đã xác nhận</string>
    <string name="shipping">Đang giao hàng</string>
    <string name="delivered">Giao hàng thành công</string>
    <string name="cancelled_status">Đã hủy đơn hàng</string>

    <string name="total_product_price">Tổng tiền hàng:</string>
    <string name="deposit">Tiền cọc:</string>
    <string name="balance">Thành tiền:</string>
    <string name="cancel_reason_label">Lý do hủy:</string>

    <string name="cancel_order">Hủy đơn hàng</string>
    <string name="send_request">Gửi yêu cầu</string>
    <string name="cancel_reason_hint">Vui lòng ghi chi tiết lý do hủy đơn của bạn</string>
    <string name="choose_reason">Chọn một lý do</string>

</resources>